--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="app">
       <canvas id="scene"></canvas>
-      <div class="overlay">
-        <div class="title">新年快乐，李婷</div>
-        <div class="subtitle">愿你我如星与风，岁岁相依。</div>
+      <div class="fallback-text" aria-hidden="true">
+        <div class="fallback-title">李婷，新年快乐</div>
+        <div class="fallback-subtitle">愿你我如星与风，岁岁相依。</div>
       </div>
     </div>
     <script type="module" src="/src/main.js"></script>
